# jBOM

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.toml  .secrets.baseline  BDD_AXIOMS.md  BDD_BEHAVIOR_REVIEW.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DOCS-CHARTER.md  FABRICATOR_ROTATION_TODO.md  FAULT_TESTING_TODO.md  GITHUB_SECRETS_SETUP.md  LANGUAGE.md  LICENSE  MANIFEST.in  Makefile  PRE_COMMIT_QUICK_REFERENCE.md  README.developer.md  README.man1.md  README.man3.md  README.man4.md  README.man5.md  README.md  README.tests.md  SECURITY_INCIDENT_REPORT.md  TODO  WARP.md  jbom.py  kicad_bom_generator.py  kicad_jbom_plugin.py  metadata.json  pyproject.toml  requirements.fab_integration.md  requirements.inventory.md  sample_detailed_validation_report.txt  test_generator_poc.py  test_jbom.py
docs/: CHANGELOG.md  CONTRIBUTING.md  GITHUB_SECRETS_SETUP.md  PRE_COMMIT_SETUP.md  README.arch.md  README.configuration.md  README.developer.md  README.man1.md  README.man3.md  README.man4.md  README.man5.md  README.md  SECURITY_INCIDENT_REPORT.md  WARP.md  functional-test-plan.md  inventory-field-semantics.md  kicad-best-practices.md  lcsc-provider.md  test_diagnostics_phase1-2_complete.md  test_failure_diagnostics_proposal.md
docs-new/: README.md
examples/: JLCPCB-INVENTORY.csv  JLCPCB-INVENTORY.xlsx  Parts Inventory on JLCPCB.xlsx  README-search-tests.md  README.md  SPCoast-INVENTORY.csv  SPCoast-INVENTORY.numbers  SPCoast-INVENTORY.xlsx  combined.csv  example-INVENTORY.csv  example-INVENTORY.numbers  example-INVENTORY.xlsx  test-search-INVENTORY.csv  (+2 more)
(+1036 files in other folders)
